task: setup actions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.2", features = ["dynamic_linking"] }
+bevy_asset_loader = "0.22.0"
 bevy_ggrs = { version = "0.17.0", features = ["wasm-bindgen"] }
 bevy_matchbox = { version = "0.11.0", features = ["ggrs"] }
 
