--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,3 @@
-[package]
-name = "coolgamer"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-bevy = { version = "0.15.2", features = ["dynamic_linking"] }
-bevy_asset_loader = "0.22.0"
-bevy_ggrs = { version = "0.17.0", features = ["wasm-bindgen"] }
-bevy_matchbox = { version = "0.11.0", features = ["ggrs"] }
-
-# Enable a small amount of optimization in the dev profile.
-[profile.dev]
-opt-level = 1
-
-# Set optimization level for dependencies in dev profile
-# This improves runtime performance while maintaining fast compilation
-# Level 3 enables all optimizations for maximum performance
-[profile.dev.package."*"]
-opt-level = 3
-
-# Link Time Optimization (LTO) combines all crate's code into a single unit for better optimization
-# opt-level = 3 enables all optimizations (max is 3)
-# codegen-units = 1 enables better optimization by compiling everything as a single unit
-# incremental = false disables incremental compilation for maximum performance
-# debug = false removes debug symbols to reduce binary size
-[profile.release]
-lto = true
-opt-level = 3
-codegen-units = 1
-incremental = false
-debug = false
+[workspace]
+resolver = "2"
+members = ["blockshot", "venture_time"]
