--- a/venture_time/Cargo.toml
+++ b/venture_time/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.15.2"
-bevy_asset_loader = "0.22.0"
+bevy_asset_loader = { version = "0.22.0", features = ["2d", "standard_dynamic_assets", "progress_tracking"]}
+iyes_progress = "0.13.1"
 leafwing-input-manager = "0.16.0"
 
 [features]
