--- a/venture_time/Cargo.toml
+++ b/venture_time/Cargo.toml
@@ -8,6 +8,7 @@ bevy = "0.15.2"
 bevy_asset_loader = { version = "0.22.0", features = ["2d", "standard_dynamic_assets", "progress_tracking"]}
 iyes_progress = "0.13.1"
 leafwing-input-manager = "0.16.0"
+rand = "0.8.5"
 
 [features]
 default = [
