chore: update venture time to bevy 0.16

--- a/physical/Cargo.toml
+++ b/physical/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "venture_time"
+name = "physical"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bevy = "0.16.1"
-bevy_asset_loader = { version = "0.23.0", features = ["2d", "standard_dynamic_assets", "progress_tracking"]}
-iyes_progress = "0.14.0"
-leafwing-input-manager = "0.17.0"
-rand = "0.8.5"
+bevy_rapier2d = "0.29.0"
+nalgebra = "0.33.2"
 
 [features]
 default = [
