--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["blockshot", "venture_time", "paddle"]
+members = ["blockshot", "venture_time", "paddle", "physical"]
